--- a/src/styleSheets/header/Logo.css
+++ b/src/styleSheets/header/Logo.css
@@ -1,10 +1,16 @@
 .Encabezado{
     padding: 1em;
-    display: flex;
+    display:grid;
+    grid-template-columns: 200px 1fr 1fr 1fr;
+    position: fixed;
+    background-color: transparent;
 }
 .top-titulo{
+    margin-top: 15px;
+    font-size: large;
     text-align: left;
 }
 .top-container{
-    margin-left: 50px;
+    text-align: left;
+    margin-left: 25px;
 }
