--- a/src/styleSheets/Testimonio.css
+++ b/src/styleSheets/Testimonio.css
@@ -2,7 +2,8 @@
     width: 1170px;
     height: 368px;
     margin: 10px 10px 50px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-content: center;
     background-color: aquamarine;
