--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+.ImagesHeader{
+  padding: 1em;
+  background: transparent;
+}
+
 .Body {
   padding: 10em;
   text-align: center;
@@ -7,6 +12,5 @@
 .Footer {
   padding: 10em;
   display: flex;
-  
   background-color:rgb(101, 71, 129);
 }
