--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 .Body {
   padding: 10em;
   text-align: center;
-  background-color: antiquewhite;
+  background-color: rgb(255, 255, 255);
 }
 
 .Footer {
