--- a/src/styleSheets/ProductPage.css
+++ b/src/styleSheets/ProductPage.css
@@ -1,3 +1,7 @@
+.title {
+  
+}
+
 .product-page {
   display: grid;
   grid-template-columns: repeat(4, 1fr); /* 4 columnas, cada una con igual tamaño */
