Eliminacion de archivos js inutilizados, modificacion de pruebas, y adicion de elementos del productPage #2 parte 2

--- a/src/styleSheets/ProductPage.css
+++ b/src/styleSheets/ProductPage.css
@@ -1,6 +1,19 @@
-.title {
-  
+.clothing.container{
+  display: flex;
+  flex-direction: column-reverse;
 }
+.clothing-box-1{
+  width: 40%;
+  background-color: #999E67;
+  font-size:2
+}
+.clothing-box-2{
+  width: 40%;
+  background-color: #A17F7A;
+  font-size: 1vw;
+}
+
+
 
 .product-page {
   display: grid;
