--- a/src/App.css
+++ b/src/App.css
@@ -12,5 +12,7 @@
 .Footer {
   padding: 10em;
   display: flex;
-  background-color:rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
+  justify-content: center;
+  align-items: center;
 }
