--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.Bottom {
+  padding: 10em;
+  text-align: center;
+  background-color: #E5E5E5;
+}
