--- a/src/styleSheets/Testimonio.css
+++ b/src/styleSheets/Testimonio.css
@@ -6,6 +6,6 @@
     grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-content: center;
-    background-color: aquamarine;
+    background-color: #c68a40;
     box-shadow: 0 3px 13px 1px rgb(0 0 0 /9%);
 }
