--- a/src/styleSheets/Testimonio.css
+++ b/src/styleSheets/Testimonio.css
@@ -1,7 +1,7 @@
 .Testimonio{
     width: 1170px;
     height: 368px;
-    margin: 10px 10px 50px;
+    margin: 0px 0px 0px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
@@ -9,3 +9,9 @@
     background-color: aquamarine;
     box-shadow: 0 3px 13px 1px rgb(0 0 0 /9%);
 }
+
+.TextoTestimonio {
+    padding: 10px;
+    margin: 0;
+  }
+  
