--- a/src/styleSheets/ProductPage.css
+++ b/src/styleSheets/ProductPage.css
@@ -1,11 +1,25 @@
+.page-title {
+  text-align: center;
+}
+
+.clean-container{
+  user-select:none;
+  width: 20%;
+  font-size:2em;
+  border-radius: 12px;
+  padding: 12px;
+  margin: 20px;
+}
+
 .clothing-container{
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
+
 .clothing-box-1{
   user-select:none;
-  width: 40%;
+  width: 20%;
   background-color: #999E67;
   font-size:2em;
   border-radius: 12px;
@@ -15,7 +29,7 @@
 }
 .clothing-box-2{
   user-select:none;
-  width: 40%;
+  width: 20%;
   background-color: #A17F7A;
   font-size: 1vw;
   font-size:2em;
@@ -24,11 +38,12 @@
   padding: 12px;
   margin: 20px;
 }
+
 .img{
   width: 100%;
 }
 .BodyPage {
-  width: 50%;
+  width: 75%;
   margin: 0 auto; 
   text-align: center;
   background-color: antiquewhite;
@@ -37,7 +52,7 @@
 .ProductPage{
   width: 100%;
   margin: 0 auto; 
-  background-color: antiquewhite;
+  background-color: rgb(255, 255, 255);
 }
 
 .Header{
