--- a/src/styleSheets/Perfil.css
+++ b/src/styleSheets/Perfil.css
@@ -18,13 +18,22 @@
     width: 70%;
     height: auto;
     object-fit: cover;
+    border-radius: 10px;
   }
-  
+  .main-image {
+    flex: 1;
+    margin-right: 20px; /* Add this line */
+    margin-top: 10px; /* Add this line */
+    padding: 10px; /* Add this line */
+    border-radius: 10px; /* Add this line */
+    background-color: #f5f5f5; /* Add this line */
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Add this line */
+  }
   .products {
     flex: 1;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
+    gap: 10px;
     justify-items: center;
   }
   
