--- a/src/styleSheets/contactanos.css
+++ b/src/styleSheets/contactanos.css
@@ -1,11 +1,9 @@
-.App {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f0f0f0;
-  }
-  
+.Contactanos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f0f0f0;
   form {
     display: flex;
     flex-direction: column;
@@ -15,26 +13,27 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     background-color: white;
   }
-  
-  input, textarea {
+
+  input,
+  textarea {
     margin-bottom: 10px;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ddd;
     border-radius: 5px;
   }
-  
+
   button {
     padding: 10px;
     font-size: 16px;
-    background-color: #4CAF50;
+    background-color: #4caf50;
     color: white;
     border: none;
     cursor: pointer;
     border-radius: 5px;
   }
-  
+
   button:hover {
     background-color: #45a049;
   }
-  
+}
