--- a/src/styleSheets/Testimonio.css
+++ b/src/styleSheets/Testimonio.css
@@ -5,7 +5,7 @@
     justify-content: space-around;
     align-items: center;
     padding: 2em;
-    background-color: #000033;
+    background-color: #e3e3e3;
     border-radius: 15px;
     box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
     font-family: 'Montserrat', sans-serif;
@@ -28,14 +28,14 @@
 
 .Contenedor-texto {
     max-width: 50%;
-    background-color: #000033;
+    background-color: #e3e3e3;
     padding: 1em;
     border-radius: 15px;
     box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
 }
 
 .Texto-Testimonio {
-    color: #808080;
+    color: #000000;
     line-height: 1.6;
     font-size: 1em;
     text-indent: 2em;
