--- a/src/styleSheets/menuProductos.css
+++ b/src/styleSheets/menuProductos.css
@@ -21,11 +21,18 @@
   transform: scale(1.02);
 }
 .product-image {
-  width: 100%;
-  height: 300px;
-  object-fit: cover;
+  width: 400px; /* Cambiado de '100%' a un tamaño fijo */
+  height: 400px; /* Cambiado de 'auto' a un tamaño fijo */
+  object-fit: cover; /* Cambiado de 'contain' a 'cover' para asegurar que la imagen cubra todo el espacio disponible */
   border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+  transition: transform 0.2s ease-in-out;
 }
+
+.product-image:hover {
+  transform: scale(1.05);
+}
+
 .product-name {
   font-size: 24px; /* Aumentado el tamaño de la fuente */
   margin: 10px 0;
