--- a/src/styleSheets/Profile.css
+++ b/src/styleSheets/Profile.css
@@ -1,15 +1,37 @@
+/* Profile.css */
+
 .profile {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     width: 80%;
     margin: auto;
     padding: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    background-color: #f5f5f5;
+    border-radius: 20px;
+    background: linear-gradient(145deg, #e6e6e6, #ffffff);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+}
 
+.profile h2 {
+    margin: 0;
+    color: #333;
+}
+
+.profile-button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-bottom: 20px;
+    color: #fff;
+    background-color: #007BFF;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+.profile-button:hover {
+    background-color: #0056b3;
+}
 
 .category-container {
     display: flex;
@@ -41,17 +63,19 @@
 .item {
     flex: 0 0 auto;
     width: 200px;
-    height: 200px;
-    margin-right: 10px;
+    height: 250px;
+    margin-right: 20px;
+    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid #ccc;
-    border-radius: 10px;
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.1); /* Añadido sombra para dar profundidad */
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.1);
 }
 
 .item:last-child {
@@ -59,31 +83,38 @@
 }
 
 .item:hover {
-    background-color: #ddd;
-    transform: scale(1.05); /* Añadido efecto de zoom al hacer hover */
+    transform: translateY(-5px);
+    box-shadow: 0px 10px 20px rgba(0,0,0,0.2);
 }
 
-.item img, .selected-item img {
-    width: 150px;
-    height: 150px;
+.item img {
+    width: 100%;
+    height: 70%;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+}
+
+.item p {
+    margin: 10px 0;
+    font-size: 18px;
+    color: #333;
+}
+
+.selections {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.selected-item {
+    margin: 10px;
+    text-align: center;
+}
+
+.selected-item img {
+    width: 100px;
+    height: 100px;
     object-fit: cover;
     border-radius: 50%;
     border: 2px solid #ccc;
-}
-
-.profile-button {
-    display: inline-block;
-    padding: 10px 20px;
-    margin-bottom: 20px;
-    color: #fff;
-    background-color: #007BFF;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-}
-
-.profile-button:hover {
-    background-color: #0056b3;
-}
 }
