--- a/src/styleSheets/ProfileCanvas.css
+++ b/src/styleSheets/ProfileCanvas.css
@@ -1,38 +1,37 @@
+/* DatosUsuario.css */
+
 .offcanvasBody {
-    background-color: #f8f9fa;
-    color: #212529;
+    background-color: #fff;
     padding: 20px;
-    font-family: 'Arial', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .user-data {
-    border-bottom: 1px solid #dee2e6;
-    padding: 20px 0;
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
 .user-data svg {
     width: 50px;
     height: 50px;
     fill: #007BFF;
-    margin-right: 10px;
-}
-
-.user-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 .user-info p {
-    margin: 5px 0;
+    margin-bottom: 10px;
+    font-size: 18px;
+    color: #333;
+}
+
+.user-info p:last-child {
+    margin-bottom: 0;
 }
 
 .profile-button {
+    display: inline-block;
     padding: 10px 20px;
     margin-top: 20px;
     color: #fff;
